# activitist

./: Cargo.toml  README.md
src/: model.rs
src/json/: mod.rs  model_conv.rs
tests/json/: mod.rs
