[package]
name = "activitist"
version = "0.1.0"
description = "Models of ActivityPub"
repository = "https://github.com/mizunashi-mana/activitist"

edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc", "std"] }
serde_with = { version = "3.3", default-features = false, features = ["macros"] }
chrono = { version = "0.4", features = ["serde"] }
url = "2.4"
